--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -5,6 +5,14 @@
 <title>{{pagetitle}}</title>
 <style type="text/css">
 .num { text-align: right }
+.labelled_text label {
+    float: left;
+    display: inline-block;
+    width: 8.5em;
+}
+.labelled_text {
+    clear: both;
+}
 {% block pagestyle %}{% endblock%}
 </style>
 </head>
