--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -199,33 +199,35 @@ $(document).ready(function(){
 
 <div id="categories" class="tab-pane {{ activetab('categories') }}">
     <h4>Categories</h4>
+    <form method="POST" action="{{ url_for('.ispreports_update_category') }}">
+        <input type="hidden" name="report_id" value="{{ report.id }}" />
     <div class="row">
-        <div class="col-md-5">
-    <ul>
-        {% for cat in categories %}
-        <li>
-        {% if cat.enabled %}
-        {{ cat.display_name }} ({{ cat.namespace }})
-        <a href="{{ url_for('.ispreports_addremove_category', mode='disable', id=cat.url_category_id, report=report.id) }}" class=""><span class="glyphicon glyphicon-trash"></span></a>
-        {% else %}
-        <strike>{{ cat.display_name }} ({{cat.namespace}})</strike>
-        <a href="{{ url_for('.ispreports_addremove_category', mode='enable', id=cat.url_category_id, report=report.id) }}" class=""><span class="glyphicon glyphicon-repeat"></span></a>
-        {% endif %}
-		{% if cat.url_category_userid %}
-		<span class="glyphicon glyphicon-user" title="Category added/removed by administrator"></span>
-		{% endif %}
-        </li>
-        {% endfor %}
-    </ul>
+        <div class="col-md-4">
+        <ul>
+            {% for cat in categories %}
+            <li>
+                <input type="checkbox" name="url_category_id" value="{{ cat.url_category_id }}" />
+            {% if cat.enabled %}
+                {{ cat.display_name }} ({{ cat.namespace }})        
+            {% else %}
+            <strike>{{ cat.display_name }} ({{cat.namespace}})</strike>
+            {% endif %}
+            {% if cat.url_category_userid %}
+            <span class="glyphicon glyphicon-user admin-comments" title="Category added/removed by administrator" data-id="{{ cat.url_category_id }}"></span>
+            {% endif %}
+            </li>
+            {% endfor %}
+        </ul>
+        <p class="hint">Check categories to toggle enabled/disabled.</p>
+    
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
         
-        <form method="POST" action="{{ url_for('.ispreports_update_category') }}">
-            <input type="hidden" name="report_id" value="{{ report.id }}" />
+        
             
             <div class="form-group">
-                <label class="control-label" for="category_id">Add Category</label>
-                <select class="form-control" name="category_id">
+                <label class="control-label" for="category_id">Assign existing Category</label>
+                <select class="form-control" name="add_category_id">
                     <option value="" selected>(None)</option>
                     {% for group in all_categories|groupby('1') %}
                     <optgroup label="{{ group.grouper }}">
@@ -234,17 +236,38 @@ $(document).ready(function(){
                     {% endfor %}
                     </optgroup>
                     {% endfor %}
-                </select>
+                </select>                
             </div>
+            <p><em>Or</em></p>
+            {{ forms.text_field('Add new category', 'add_category_name', '') }}
+
+        </div>
+        <div class="col-md-4">
             
-        {{  forms.textarea_field('Category notes', 'category_notes', report.category_notes|default(''), rows=6 ) }}
-        
-        <input type="submit" value="Update" class="btn btn-primary" />
-        </form>
-        
+            {{  forms.textarea_field('Category notes', 'category_notes', '', rows=6 ) }}
         
         </div>
     </div>
+    <div style="text-align: right">
+    <input type="submit" value="Update" class="btn btn-primary btn-lg" />
+    </div>
+    </form>
+    <hr />
+    <h4>Category comments</h4>
+    <table class="table table-striped table-condensed">
+    <tr>
+    <th>User</th>
+    <th>Date</th>
+    <th>Comment</th>
+    </tr>
+    {% for comment in comments %}
+    <tr>
+    <td>{{ comment.username }}</td>
+    <td>{{ comment.created|fmtime }}</td>
+    <td>{{ comment.description }}</td>
+    </tr>
+    {% endfor %}
+    </table>
 </div> <!-- /#categories -->
 
 <div id="block" class="tab-pane {{ activetab('block') }}">
