--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -10,6 +10,8 @@
 {%- else %}
 {%-   if message['content-transfer-encoding'] == 'base64' %}
 {%- set msg=message.get_payload().decode('base64').decode('utf8') %}
+{%-   elif message['content-transfer-encoding'] == 'quoted-printable' %}  
+{%- set msg=message.get_payload().decode('quoted-printable').decode('utf8') %}
 {%-   else %}
 {%- set msg=message.get_payload() %}
 {%-   endif %}
