--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -32,6 +32,7 @@ td.center, th.center {
   <th>Created</th>
   <th class="center"Report<br/>Status</th>
   <th>Replies</th>
+  <th class="center">Reviewed</th>
   <th></th>
 </tr>
 {% for report in reports.reports %}
@@ -69,6 +70,11 @@ td.center, th.center {
     {% endif %}
   </td>
   <td class="num">{{ report.reply_count }}</td>
+  <td class="center">
+  {% if report.matches_policy != None %}
+      <span class="text-success glyphicon glyphicon-ok-sign" title="Block has been reviewed"></span>
+  {% endif %}
+  </td>
   <td>
 
     {%- if report.status == 'pending' -%}
