add block bool fields openrightsgroup/cmp-issues#184

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -286,6 +286,10 @@ $(document).ready(function(){
                 <input type="hidden" name="report_id" value="{{ report.id }}" />
                 {{ forms.radio_field("Block matches the ISP's policy", 'matches_policy', 'true', True if report.matches_policy else False) }}
                 {{ forms.radio_field("Block does not match the ISP's policy", 'matches_policy', 'False', True if report.matches_policy == False else False) }}
+                
+                {{ forms.check_field("This is an egregious block", 'egregious_block', 't', report.egregious_block) }}
+                {{ forms.check_field("Add to frontend site \"featured blocks\".", 'featured_block', 't', report.featured_block) }}
+                
                 {{ forms.textarea_field("Notes", "review_notes", '', rows=6) }} 
                 <input type="submit" value="Update" class="btn btn-primary" />
             </form>
@@ -297,6 +301,8 @@ $(document).ready(function(){
     <th>User</th>
     <th>Date</th>
     <th>Matches Policy</th>
+    <th>Egregious</th>
+    <th>Featured</th>
     <th>Comment</th>
     </tr>
     {% for comment in review_comments %}
@@ -304,6 +310,8 @@ $(document).ready(function(){
     <td>{{ comment.username }}</td>
     <td>{{ comment.created|fmtime }}</td>
     <td>{{ comment.matches_policy|null }}</td>
+    <td>{{ comment.egregious_block|null }}</td>
+    <td>{{ comment.featured_block|null }}</td>
     <td>{{ comment.review_notes }}</td>
     </tr>
     {% endfor %}
