--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -80,6 +80,10 @@ $(document).ready(function(){
 <p>No current status information</p>
 {% endif %}
 
+<div>
+<a target="_blank" href="{{ url_for('site.site', url=url) }}" class="btn btn-link" title="View status page on the public site; opens in a new window">View site status on Blocked</a>
+</div>
+
 </div>
 
 <div class="col-md-2" style="text-align: right">
