--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -97,6 +97,12 @@ $(document).ready(function(){
 <div class="label label-danger label-lg"><span class="glyphicon glyphicon-remove success"></span> Rejected</div>
 {% endif %}
 </h2>
+
+{% if report_next %}
+<div><a href="{{ url_for('.ispreports_view', network_name=report_next.network_name, url=report_next.url) }}" class="btn btn-primary btn-lg">Next Report <span class="glyphicon glyphicon-forward"></span></a></div>
+
+{% endif %}
+
 </div>
 </div> <!-- /.row -->
 
