--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -40,6 +40,21 @@ $(document).ready(function(){
     $('#messagelist tr').click(function(){
         window.location.href = $(this).data('href');
     });
+    
+    $('#newtag').hide();
+    $('#switchnewtag').click(function(){
+      $('#newtag').show();
+      $('#existingtag').hide();
+      return false;
+    });   
+    $('#switchexistingtag').click(function(){
+      $('#newtag').hide();
+      $('#existingtag').show();
+      $('input[name=newtag]').val('');
+      return false;
+    });
+
+    
 });
 {% endblock %}
 
@@ -111,6 +126,7 @@ $(document).ready(function(){
 <ul class="nav nav-tabs">
   <li class="{{ activetab('messages','messages') }}"><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
   <li class="{{ activetab('categories') }}"><a href="#categories" role="tab"  data-toggle="tab">Review Categories</a></li>
+  <li class="{{ activetab('rptcategories') }}"><a href="#rptcategories" role="tab"  data-toggle="tab">Report Categories</a></li>
   <li class="{{ activetab('block') }}"><a href="#block" role="tab" data-toggle="tab">Review Block
   {% if report.matches_policy != None -%}
   <span class="text-success glyphicon glyphicon-ok"></span>
@@ -284,6 +300,90 @@ $(document).ready(function(){
     {% endfor %}
     </table>
 </div> <!-- /#categories -->
+
+<div id="rptcategories" class="tab-pane {{ activetab('rptcategories') }}">
+
+<form method="POST" action="{{ url_for('.ispreports_update_report_category') }}">
+<input type="hidden" name="report_id" value="{{ report.id }}" />
+
+<div class="row">
+<div class="col-md-6">
+
+
+    
+<h4>Who made the report?</h4>
+
+<div class="form-group">
+    <label class="control-label" for="tag">Add reporter category:</label>
+    <div id="existingtag" class="input-group">
+    <select class="form-control" name="reporter_category_id">
+        <option value="">(None selected)</option>
+        {% for opt in reporter_categories %}
+        <option value="{{opt[0]}}" {{ 'selected' if opt[0] == report.reporter_category_id else '' }}>{{opt[1]}}</option>
+        {% endfor %}
+    </select>
+    <div class="input-group-addon"><a id="switchnewtag" title="Enter a new tag"><span class="glyphicon glyphicon-plus-sign"></span></a></div>
+    </div>
+    <div id="newtag" class="input-group">
+        
+        <input class="form-control" name="new_reporter_category" placeholder="new-category" />
+        <div class="input-group-addon"><a id="switchexistingtag" title="Select from list of existing categories"><span class="glyphicon glyphicon-remove-sign"></span></a></div>
+    </div>
+</div>
+
+
+
+<h4>What if any, damage was reported?</h4>    
+<div class="row">
+<div class="col-md-6">
+    
+    <ul>
+    {% for cat in report_damage_categories %}
+    <li>{{ cat.name }}</li>
+    {% endfor %}
+    </ul>
+    
+</div>
+<div class="col-md-6">
+    
+{{ forms.select_field('Add existing category', 'damage_category_id', None, damage_categories, includenull=True ) }}
+<p><em>Or</em></p>
+{{ forms.text_field('Add new category', 'add_category_name', '') }}
+    
+</div>
+</div>
+
+</div>
+<div class="col-md-6">
+{{ forms.textarea_field('Review Notes', 'review_notes', '', rows=6) }}
+</div>
+</div>   
+
+<div>
+<input class="btn btn-primary btn-lg" type="submit" value="Update" />
+</div> 
+
+<hr />
+<h4>Report Comments</h4>
+
+    <table class="table table-striped table-condensed">
+    <tr>
+    <th>User</th>
+    <th>Date</th>
+    <th>Comment</th>
+    </tr>
+    {% for comment in report_comments %}
+    <tr>
+    <td>{{ comment.username }}</td>
+    <td>{{ comment.created|fmtime }}</td>
+    <td>{{ comment.review_notes }}</td>
+    </tr>
+    {% endfor %}
+    </table>
+
+</form>
+
+</div> <!-- /#rptcategory -->
 
 <div id="block" class="tab-pane {{ activetab('block') }}">
     <div class="row">
