--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -42,6 +42,7 @@
               </ul>
           </li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
+          <li class=""><a href="{{ url_for('.ispreport_stats') }}">ISP Report Stats</a></li>
           <li class=""><a href="{{ url_for('.tests') }}">Test Schedule</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
