--- a/BlockedFrontend/templates/admin/ispreport_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_stats.html
@@ -10,9 +10,9 @@
 
 <table class="table table-compressed">
 <tr>
-<th>Reporter</th>
-<th>Damage</th>
-<th>Network</th>
+<th><a href="{{ url_for('.ispreport_stats', o='r') }}">Reporter</a></th>
+<th><a href="{{ url_for('.ispreport_stats', o='d') }}">Damage</a></th>
+<th><a href="{{ url_for('.ispreport_stats', o='n') }}">Network</a></th>
 {% for yr in range(2016, currentyear) %}
 <th class="num">{{ yr }}</th>
 {% endfor %}
