--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -30,6 +30,9 @@ td.center, th.center {
     <li role="presentation" class="{{ 'active' if request.args.state == 'featured' else '' }}">
         <a href="{{ url_for('.ispreports', state='featured', network=request.args.network, category=request.args.category, page=request.args.get('page') ) }}">Featured <span class="badge">{{ reports.feature_count }}</span></a>
     </li>
+    <li role="presentation" class="{{ 'active' if request.args.state == 'harmless' else '' }}">
+        <a href="{{ url_for('.ispreports', state='harmless', network=request.args.network, category=request.args.category, page=request.args.get('page') ) }}">Harmless <span class="badge">{{ reports.harmless_count }}</span></a>
+    </li>
     <li role="presentation" class="">|</li>
     
     <li role="presentation" class="dropdown {{'active' if request.args.network else ''}}">
