isp stats totals; openrightsgroup/cmp-issues#200

--- a/BlockedFrontend/templates/admin/ispreport_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_stats.html
@@ -81,7 +81,7 @@
 
 <table class="table table-compressed">
 <tr>
-<th>Damage</th>
+<th>ISP</th>
 {% for yr in range(2016, currentyear+1) %}
 <th class="num">{{ yr }}</th>
 {% endfor %}
