--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -42,7 +42,15 @@
               </ul>
           </li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
-          <li class=""><a href="{{ url_for('.ispreport_stats') }}">ISP Report Stats</a></li>
+
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ISP Stats<span class="caret"></span></a></a>
+              <ul class="dropdown-menu">
+                  <li class=""><a href="{{ url_for('.ispreport_stats') }}">ISP Report Stats</a></li>
+                  <li class=""><a href="{{ url_for('.ispreport_reply_stats') }}">ISP Report Reply Stats</a></li>
+              </ul>
+          </li>
+
           <li class=""><a href="{{ url_for('.tests') }}">Test Schedule</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
