--- a/BlockedFrontend/templates/admin/ispreport_reply_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_reply_stats.html
@@ -33,5 +33,26 @@
     </div>
 </div>
 
+<h2>Reply stats by network</h2>
+
+<table class="table">
+    <tr>
+        <th>Network</th>
+        <th class="num">Reports Sent</th>
+        <th class="num">Auto-replies logged</th>
+        <th class="num">Total replies logged</th>
+        <th class="num">Avg reply interval (WIP)</th>
+    </tr>
+    {% for row in reply_stats %}
+    <tr>
+        <td>{{ row.network_name }}</td>
+        <td class="num">{{ row.reports_sent }}</td>
+        <td class="num">{{ row.auto_replies_logged }}</td>
+        <td class="num">{{ row.replies_logged }}</td>
+        <td class="num">{{ row.avg_response_time }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
 {% endblock %}
 
