--- a/BlockedFrontend/templates/admin/ispreport_reply_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_reply_stats.html
@@ -3,6 +3,18 @@
 
 {% set pagetitle = "ISP Report Reply Stats" %}
 
+{% block pagestyle %}
+.headerrow {
+    font-size: small;
+    background-color: #ededed;
+    font-weight: bold;
+    }
+
+.sub {
+    padding-left: 20px !important;
+    }
+{% endblock %}
+
 {% block body %}
 <h1>ISP Reply Stats</h1>
 
@@ -37,20 +49,25 @@
 
 <table class="table">
     <tr>
-        <th>Network</th>
+        <th>Network/Year</th>
         <th class="num">Reports Sent</th>
         <th class="num">Auto-replies logged</th>
         <th class="num">Total replies logged</th>
         <th class="num">Avg reply interval (WIP)</th>
+        <th class="num">Open report count</th>
     </tr>
-    {% for row in reply_stats %}
+    {% for group, list in reply_stats|groupby('network_name') %}
+    <tr><td colspan="6" class="headerrow">{{ group }}</td></tr>
+    {% for row in list %}
     <tr>
-        <td>{{ row.network_name }}</td>
+        <td class="sub">{{ row.year }}</td>
         <td class="num">{{ row.reports_sent }}</td>
         <td class="num">{{ row.auto_replies_logged }}</td>
         <td class="num">{{ row.replies_logged }}</td>
-        <td class="num">{{ row.avg_response_time }}</td>
+        <td class="num">{{ (row.avg_response_time|string).split(', ',1)|first if row.avg_response_time else '' }}</td>
+        <td class="num"><a href="{{ url_for('.ispreports', state='open', network=row.network_name) }}">{{ row.count_open }}</a></td>
     </tr>
+    {% endfor %}
     {% endfor %}
 </table>
 
