--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -48,6 +48,7 @@
               <ul class="dropdown-menu">
                   <li class=""><a href="{{ url_for('.ispreport_stats') }}">ISP Report Stats</a></li>
                   <li class=""><a href="{{ url_for('.ispreport_reply_stats') }}">ISP Report Reply Stats</a></li>
+                  <li class=""><a href="{{ url_for('.ispreport_consistency') }}">ISP Blocking consistency stats</a></li>
               </ul>
           </li>
 
