--- a/BlockedFrontend/templates/admin/ispreport_consistency.html
+++ b/BlockedFrontend/templates/admin/ispreport_consistency.html
@@ -46,6 +46,40 @@ $(document).ready(function(){
       }
     }
   });
+  var ctx = document.getElementById("networks").getContext('2d');
+  var category_chart = new Chart(ctx, {
+    type: 'horizontalBar',
+    data: {
+        labels: {{ networks  | sort(attribute='network_name') | map(attribute='network_name') | list |tojson }},
+        datasets:[
+          {
+              data: {{ networks |sort(attribute='network_name')|map(attribute='count') | list | tojson }},
+              backgroundColor: 'red'
+          },
+
+        ]
+    },
+    options: {
+      legend: { display: false },
+      scales: {
+        xAxes: [{
+          ticks: {
+            beginAtZero: true
+          },
+          scaleLabel: {
+            labelString: "Blocked URL count",
+            display: true
+          }
+        }],
+        yAxes: [{
+          scaleLabel: {
+            labelString: "Network",
+            display: true
+          }
+        }]
+      }
+    }
+  });
 })
 
 {% endblock %}
@@ -58,6 +92,9 @@ $(document).ready(function(){
 <div class="row">
     <div class="col-md-6">
         <canvas id="blockfreq" width="100%" height="40"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="networks" width="100%" height="40"></canvas>
     </div>
 </div>
 
