update mobile inconsistency table

--- a/BlockedFrontend/templates/admin/ispreport_consistency.html
+++ b/BlockedFrontend/templates/admin/ispreport_consistency.html
@@ -96,6 +96,8 @@ $(document).ready(function(){
 
 {% block body %}
 
+<h1>Mobile Inconsistency reports</h1>
+
 <div class="row">
     <div class="col-md-6">
         <canvas id="blockfreq" width="100%" height="40"></canvas>
